--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -5,8 +5,7 @@
     android:id="@+id/drawerPlacesLayout"
     android:layout_width="match_parent"
     android:background="?colorSecondary"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragments.ActionsFragment">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -33,7 +32,7 @@
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Śledzenie lokalizacji jest wyłączone!\n Jeśli chcesz śledzić swoje akcje, przejdź do Ustawień i włącz Śledzenie lokalizacji"/>
+                android:text="@string/location_warning"/>
         </LinearLayout>
 
         <ListView
