--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -46,7 +46,7 @@
                     android:layout_marginBottom="15dp"
                     android:layout_marginStart="15dp"
                     android:textSize="15sp"
-                    android:text="@string/serbska_17_61_696_pozna_poland" />
+                    android:text="@string/address" />
 
             </LinearLayout>
 
